<resources>
    <string name="app_name">Record Keeper</string>
    <string name="test_button_1_text">Test Button 1</string>
    <string name="test_button_2_text">Test Button 2</string>
    <string name="test_button_3_test">Test Button 3</string>
    <string name="test_button_4_test">Test Button 4</string>
    <string name="test_button_5_test">Test Button 5</string>
    <string name="image_description_test">Image description</string>
    <string name="test_button_text">Test button</string>
    <string name="this_is_my_example_text">This is my example text</string>
    <string name="content_desc_3">content desc</string>
    <string name="my_example_title">My Example title</string>
    <string name="submit">Submit</string>
    <string name="this_is_our_example_multiline_text">This is our example multi-line text</string>
    <string name="running_title">running</string>
    <string name="cycling_title">cycling</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="running_fragment_is_active_text">Running fragment is active</string>
    <string name="cycling_fragment_is_active_text">Cycling fragment is active</string>
    <string name="running_view_text">Running</string>
    <string name="that_dude_who_runs_image_view_desc">That dude who runs</string>
    <string name="that_dude_who_cycles">That dude who enjoys cycling</string>
    <string name="five_kilometers_text">5km</string>
    <string name="bike_view_text">Cycling</string>
    <string name="full_marathon_text">Full marathon</string>
    <string name="half_marathon_text">Half marathon</string>
    <string name="three_kilometers_text">3km</string>
    <string name="longest_ride_text">Longest Ride</string>
    <string name="biggest_climb_text">Biggest Climb</string>
    <string name="best_average_speed_text">Best average speed</string>
</resources>